--- a/force-app/main/default/classes/SubInputDetail.cls
+++ b/force-app/main/default/classes/SubInputDetail.cls
@@ -11,9 +11,9 @@
  */
 
 /**
- * OASInputDetail
+ * SubInputDetail
  */
-public class OASInputDetail {
+public class SubInputDetail {
     /**
      * Configuration parameters for the required input.
      * @return configuration
@@ -21,28 +21,10 @@ public class OASInputDetail {
     public Map<String, String> configuration { get; set; }
 
     /**
-     * Input details can also be provided recursively.
-     * @return details
-     */
-    public List<OASSubInputDetail> details { get; set; }
-
-    /**
-     * Input details can also be provided recursively (deprecated).
-     * @return inputDetails
-     */
-    public List<OASSubInputDetail> inputDetails { get; set; }
-
-    /**
-     * In case of a select, the URL from which to query the items.
-     * @return itemSearchUrl
-     */
-    public String itemSearchUrl { get; set; }
-
-    /**
      * In case of a select, the items to choose from.
      * @return items
      */
-    public List<OASItem> items { get; set; }
+    public List<Item> items { get; set; }
 
     /**
      * The value to provide in the result.
@@ -51,7 +33,7 @@ public class OASInputDetail {
     public String key { get; set; }
 
     /**
-     * True if this input value is optional.
+     * True if this input is optional to provide.
      * @return optional
      */
     public Boolean optional { get; set; }
@@ -68,39 +50,31 @@ public class OASInputDetail {
      */
     public String value { get; set; }
 
-    public OASInputDetail() {
+    public SubInputDetail() {
         configuration = new Map<String, String>();
-        details = new List<OASSubInputDetail>();
-        inputDetails = new List<OASSubInputDetail>();
-        items = new List<OASItem>();
+        items = new List<Item>();
     }
 
-    public static OASInputDetail getExample() {
-        OASInputDetail inputDetail = new OASInputDetail();
-          inputDetail.configuration = new Map<String, String>{'key'=>''};
-          inputDetail.details = new List<OASSubInputDetail>{OASSubInputDetail.getExample()};
-          inputDetail.inputDetails = new List<OASSubInputDetail>{OASSubInputDetail.getExample()};
-          inputDetail.itemSearchUrl = '';
-          inputDetail.items = new List<OASItem>{OASItem.getExample()};
-          inputDetail.key = '';
-          inputDetail.optional = true;
-          inputDetail.type = '';
-          inputDetail.value = '';
-        return inputDetail;
+    public static SubInputDetail getExample() {
+        SubInputDetail subInputDetail = new SubInputDetail();
+          subInputDetail.configuration = new Map<String, String>{'key'=>''};
+          subInputDetail.items = new List<Item>{Item.getExample()};
+          subInputDetail.key = '';
+          subInputDetail.optional = true;
+          subInputDetail.type = '';
+          subInputDetail.value = '';
+        return subInputDetail;
     }
 
     public Boolean equals(Object obj) {
-        if (obj instanceof OASInputDetail) {           
-            OASInputDetail inputDetail = (OASInputDetail) obj;
-            return this.configuration == inputDetail.configuration
-                && this.details == inputDetail.details
-                && this.inputDetails == inputDetail.inputDetails
-                && this.itemSearchUrl == inputDetail.itemSearchUrl
-                && this.items == inputDetail.items
-                && this.key == inputDetail.key
-                && this.optional == inputDetail.optional
-                && this.type == inputDetail.type
-                && this.value == inputDetail.value;
+        if (obj instanceof SubInputDetail) {
+            SubInputDetail subInputDetail = (SubInputDetail) obj;
+            return this.configuration == subInputDetail.configuration
+                && this.items == subInputDetail.items
+                && this.key == subInputDetail.key
+                && this.optional == subInputDetail.optional
+                && this.type == subInputDetail.type
+                && this.value == subInputDetail.value;
         }
         return false;
     }
@@ -108,9 +82,6 @@ public class OASInputDetail {
     public Integer hashCode() {
         Integer hashCode = 43;
         hashCode = (17 * hashCode) + (configuration == null ? 0 : System.hashCode(configuration));
-        hashCode = (17 * hashCode) + (details == null ? 0 : System.hashCode(details));
-        hashCode = (17 * hashCode) + (inputDetails == null ? 0 : System.hashCode(inputDetails));
-        hashCode = (17 * hashCode) + (itemSearchUrl == null ? 0 : System.hashCode(itemSearchUrl));
         hashCode = (17 * hashCode) + (items == null ? 0 : System.hashCode(items));
         hashCode = (17 * hashCode) + (key == null ? 0 : System.hashCode(key));
         hashCode = (17 * hashCode) + (optional == null ? 0 : System.hashCode(optional));
