All relevant test classes/unit tests and namespaceAccessible annotation changes

--- a/force-app/main/default/classes/CaptureRequest.cls
+++ b/force-app/main/default/classes/CaptureRequest.cls
@@ -1,20 +1,12 @@
-//
-// Represents an Adyen Capture Request
-
 /*
-{
-  "originalReference": "COPY_PSP_REFERENCE_FROM_AUTHORISE_RESPONSE",
-  "modificationAmount": {
-    "value": 500,
-    "currency": "EUR"
-  },
-  "reference": "YourModificationReference",
-  "merchantAccount": "YOUR_MERCHANT_ACCOUNT"
-}
+* Represents an Adyen Capture Request
 */
+
+@namespaceAccessible
 public class CaptureRequest {
     public String originalReference;
     public Amount modificationAmount;
     public String reference;
     public String merchantAccount;
+    public CaptureRequest(){}
 }
