--- a/force-app/main/default/classes/CaptureResponse.cls
+++ b/force-app/main/default/classes/CaptureResponse.cls
@@ -1,10 +1,10 @@
 /*
-Represents the capture response object of the Adyen API
-  {"pspReference":"883567596365413G","response":"[capture-received]"}
- */
+* Represents the capture response object of the Adyen API
+*/
 
+@namespaceAccessible
 public class CaptureResponse {
     public String pspReference;
     public String response;
-
+    public CaptureResponse(){}
 }
